frontend/test/should_pass/pattern_008.grg
pattern Foo
{
	x: Node;
	
	replace
	{
	}
}

rule r
{
	foo:Foo();

	modify
	{
		foo();
	}
}