frontend/test/should_fail/repl_001a.grg
using patt;

pattern Foo()
{
	:Node;
}

rule r {
	a:Node;
	foo1:Foo();
	
	modify {
		foo1();
	}
}